--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -12,6 +12,9 @@
         <h2>{{d.Main_heading}}</h2>
         <p>{{d.Discription}}</p>
     </div>
+    <div>
+        
+    </div>
     {% endfor %}
 </section>
 
